<resources>
    <string name="preference_ime_setting_app">Japanese IMEの設定</string>
    <string name="preference_key_setting_menu">キーボード設定</string>
    <string name="preference_key_sound_title">キー操作音</string>
    <string name="preference_key_sound_summary">キーを押した時に音を鳴らす</string>
    <string name="preference_key_vibration_title">キー操作バイブ</string>
    <string name="preference_key_vibration_summary">キーを押した時に振動で知らせる</string>
    <string name="preference_preview_title">キーポップアップ</string>
    <string name="preference_preview_summary">入力時に選択したキーを拡大表示する</string>
    <string name="preference_auto_caps_title">自動大文字変換</string>
    <string name="preference_auto_caps_summary">英字入力で文頭文字を大文字にする</string>
    <string name="preference_keyboard_skin_title">キーボードのデザイン</string>
    <string name="preference_keyboard_skin_summary">キーボードのデザインを切り替える</string>
    <string name="preference_keyboard_android_default">標準</string>
    <string name="preference_keyboard_simple">シンプル</string>
    <string name="preference_keyboard_metal">メタリック</string>
    <string name="preference_conversion_menu">Conversion</string>
    <string name="preference_conversion_menu_ja">日本語変換設定</string>
    <string name="preference_conversion_menu_en">英語変換設定</string>
    <string name="preference_prediction_title">Word Prediction</string>
    <string name="preference_prediction_title_ja">日本語予測変換</string>
    <string name="preference_prediction_title_en">英語予測変換</string>
    <string name="preference_prediction_summary">文字を入力すると変換候補を表示する</string>
    <string name="preference_correct_spell_title">Typing Error Correction</string>
    <string name="preference_correct_spell_title_en">英語入力ミス補正</string>
    <string name="preference_correct_spell_summary">入力間違いの修正候補を表示する</string>
    <string name="preference_input_learning_title">Input Word Learning</string>
    <string name="preference_input_learning_title_ja">日本語候補学習</string>
    <string name="preference_input_learning_title_en">英語候補学習</string>
    <string name="preference_input_learning_summary">変換で確定した語句を学習する</string>
    <string name="preference_aboutime_menu">IMEについて</string>
    <string name="preference_dictionary_menu">辞書</string>
    <string name="preference_dictionary_menu_ja">日本語ユーザー辞書</string>
    <string name="preference_dictionary_menu_en">英語ユーザー辞書</string>
    <string name="preference_dictionary_menu_zhcn">中国語ユーザー辞書</string>
    <string name="preference_user_dictionary">ユーザー辞書</string>
    <string name="preference_user_dictionary_edit_words_title">単語登録/編集/削除</string>
    <string name="preference_user_dictionary_edit_words_summary">ユーザー辞書の単語を編集する</string>
    <string name="preference_user_dictionary_edit_words_summary_ja">日本語ユーザー辞書の単語を編集する</string>
    <string name="preference_user_dictionary_edit_words_summary_en">英語ユーザー辞書の単語を編集する</string>
    <string name="preference_user_dictionary_edit_words_summary_zhcn">中国語ユーザー辞書の単語を編集する</string>
    <string name="preference_user_dictionary_clear_learning_title">学習辞書リセット</string>
    <string name="preference_user_dictionary_clear_learning_summary">学習辞書の内容をすべて消去する</string>
    <string name="preference_user_dictionary_clear_user_title">ユーザー辞書全消去</string>
    <string name="preference_user_dictionary_clear_user_summary">ユーザー辞書の内容をすべて消去する</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">キャンセル</string>
    <string name="dialog_button_close">閉じる</string>
    <string name="dialog_clear_user_dictionary_message">ユーザー辞書の内容をすべて消去しますか？</string>
    <string name="dialog_clear_learning_dictionary_message">学習辞書の内容をすべて消去しますか？</string>
    <string name="dialog_clear_user_dictionary_done">ユーザー辞書の内容をすべて消去しました。</string>
    <string name="dialog_clear_learning_dictionary_done">学習辞書の内容をすべて消去しました。</string>
    <string name="user_dictionary_list_words">単語一覧</string>
    <string name="user_dictionary_list_words_en">@string/preference_dictionary_menu_en</string>
    <string name="user_dictionary_list_words_ja">@string/preference_dictionary_menu_ja</string>
    <string name="user_dictionary_list_words_zhcn">@string/preference_dictionary_menu_zhcn</string>
    <string name="user_dictionary_edit_words">単語編集</string>
    <string name="user_dictionary_title_read">読み</string>
    <string name="user_dictionary_title_candidate">表記</string>
    <string name="user_dictionary_add">登録</string>
    <string name="user_dictionary_edit">編集</string>
    <string name="user_dictionary_delete">削除</string>
    <string name="user_dictionary_delete_confirm">選択した単語を削除しますか？</string>
    <string name="user_dictionary_delete_complete">削除しました。</string>
    <string name="user_dictionary_delete_fail">削除に失敗しました。</string>
    <string name="user_dictionary_words_duplication_message">すでに登録されています。</string>
    <string name="user_dictionary_over_max_text_size_message">登録できる最大文字数を超えています。</string>
    <string name="user_dictionary_creating_wordlist">生成中</string>
    <string name="user_dictionary_init">ユーザー辞書全消去</string>
    <string name="user_dictionary_prev_button">　≪　</string>
    <string name="user_dictionary_next_button">　≫　</string>
    <string name="openwnn_english_copyright">Ver.1.3.6\nOMRON SOFTWARE Co.,Ltd.</string>
    <string name="openwnn_english">OpenWnn English</string>
    <string name="openwnn_english_system_dictionary">/data/data/jp.co.omronsoft.openwnn/lib/libWnnEngDic.so</string>
    <string name="openwnn_english_writable_dictionary">/data/data/jp.co.omronsoft.openwnn/writableEN.dic</string>
    <string name="en_word_separators">.,;:!?</string>
    <string name="openwnn_japanese_copyright">Ver.1.3.6\nOMRON SOFTWARE Co.,Ltd.</string>
    <string name="openwnn_japanese">Japanese IME</string>
    <string name="openwnn_japanese_system_dictionary">/data/data/jp.co.omronsoft.openwnn/lib/libWnnJpnDic.so</string>
    <string name="openwnn_japanese_writable_dictionary">/data/data/jp.co.omronsoft.openwnn/writableJAJP.dic</string>
    <string name="openwnn_china_copyright">Ver.1.3.6\nOMRON SOFTWARE Co.,Ltd.</string>
    <string name="openwnn_china">OpenWnn Chinese</string>
    <string name="openwnn_china_system_dictionary">/data/data/jp.co.omronsoft.openwnn/lib/libWnnZHCNDic.so</string>
    <string name="openwnn_china_writable_dictionary">/data/data/jp.co.omronsoft.openwnn/writableZHCN.dic</string>
    <string name="cn_word_separators">.,;:!?</string>
    <string name="button_candidate_select">選　択</string>
    <string name="button_candidate_delete">学習削除</string>
    <string name="cand_tab_symbol_txt">記号</string>
    <string name="cand_tab_emoticon_txt">顔文字</string>
    <string name="half_symbol_categories_txt">[Half Symbol Categories]</string>
    <string name="full_symbol_categories_txt">[Full Symbol Categories]</string>
    <string name="half_symbol_txt">記号(半角)</string>
    <string name="full_symbol_txt">記号(全角)</string>
    <string name="key_symbol_mode">戻る</string>
    <string name="key_left_arrow">↤</string>
    <string name="key_right_arrow">↦</string>
    <string name="key_space">スペース</string>
    <string name="key_space_conv">スペース/変換</string>
    <string name="key_change_mode">文字</string>
    <string name="key_convert">変換</string>
    <string name="key_switch_keyboard">KBD</string>
    <string name="key_12key_A">゛゜ 大小</string>
    <string name="key_12key_kutoten">、。</string>
    <string name="key_12key_eisuu_kana">英数カナ</string>
    <string name="key_12key_alphabet_1">.＠ １</string>
    <string name="key_12key_alphabet_2">ABC ２</string>
    <string name="key_12key_alphabet_3">DEF ３</string>
    <string name="key_12key_alphabet_4">GHI ４</string>
    <string name="key_12key_alphabet_5">JKL ５</string>
    <string name="key_12key_alphabet_6">MNO ６</string>
    <string name="key_12key_alphabet_7">PQRS ７</string>
    <string name="key_12key_alphabet_8">TUV ８</string>
    <string name="key_12key_alphabet_9">WXYZ ９</string>
    <string name="key_12key_alphabet_0">- ０</string>
    <string name="key_12key_alphabet_A">A/a</string>
    <string name="key_12key_katakana_1">ア</string>
    <string name="key_12key_katakana_2">カ</string>
    <string name="key_12key_katakana_3">サ</string>
    <string name="key_12key_katakana_4">タ</string>
    <string name="key_12key_katakana_5">ナ</string>
    <string name="key_12key_katakana_6">ハ</string>
    <string name="key_12key_katakana_7">マ</string>
    <string name="key_12key_katakana_8">ヤ</string>
    <string name="key_12key_katakana_9">ラ</string>
    <string name="key_12key_katakana_0">ワ</string>
    <string name="key_12key_1">あ 1.＠</string>
    <string name="key_12key_2">か 2 ABC</string>
    <string name="key_12key_3">さ 3 DEF</string>
    <string name="key_12key_4">た 4 GHI</string>
    <string name="key_12key_5">な 5 JKL</string>
    <string name="key_12key_6">は 6 MNO</string>
    <string name="key_12key_7">ま 7 PQRS</string>
    <string name="key_12key_8">や 8 TUV</string>
    <string name="key_12key_9">ら 9 WXYZ</string>
    <string name="key_12key_0">わ 0 -</string>
    <string name="key_qwerty_tyouon">ー</string>
    <string name="key_qwerty_full_touten">、</string>
    <string name="key_qwerty_full_kuten">。</string>
    <string name="key_qwerty_full_question">？</string>
    <string name="key_qwerty_full_comma">，</string>
    <string name="key_qwerty_full_period">．</string>
    <string name="key_qwerty_full_at_sign">＠</string>
    <string name="key_qwerty_full_number_sign">＃</string>
    <string name="key_qwerty_full_percent_sign">％</string>
    <string name="key_qwerty_full_ampersand">＆</string>
    <string name="key_qwerty_full_asterrisk">＊</string>
    <string name="key_qwerty_full_plus_sign">＋</string>
    <string name="key_qwerty_full_minus_sign">－</string>
    <string name="key_qwerty_full_equal_sign">＝</string>
    <string name="key_qwerty_kagi_kakko_left">「</string>
    <string name="key_qwerty_kagi_kakko_right">」</string>
    <string name="key_qwerty_full_exclamation_mark">！</string>
    <string name="key_qwerty_full_left_parenthesis">（</string>
    <string name="key_qwerty_full_right_parenthesis">）</string>
    <string name="key_qwerty_full_colon">：</string>
    <string name="key_qwerty_full_semicolon">；</string>
    <string name="key_qwerty_full_middot">・</string>
    <string name="key_qwerty_full_thilde">～</string>
    <string name="key_qwerty_full_double_quotation_sign">”</string>
    <string name="key_qwerty_full_plus_minus_sign">±</string>
    <string name="key_qwerty_full_underscore">＿</string>
    <string name="key_qwerty_full_left_curly_blacket">｛</string>
    <string name="key_qwerty_full_right_curly_blacket">｝</string>
    <string name="key_qwerty_full_vertical_bar">｜</string>
    <string name="key_qwerty_full_less_than_sign">＜</string>
    <string name="key_qwerty_full_greater_than_sign">＞</string>
    <string name="key_qwerty_full_left_single_quote">‘</string>
    <string name="key_qwerty_full_right_single_quote">’</string>
    <string name="key_qwerty_full_back_slash">＼</string>
    <string name="key_qwerty_full_dollar_sign">＄</string>
    <string name="key_qwerty_full_yen_sign">￥</string>
    <string name="key_qwerty_full_hat">＾</string>
    <string name="key_qwerty_full_slash">／</string>
    <string name="key_qwerty_euro">\u20AC</string>
    <string name="key_12key_switch_full_hiragana">あ</string>
    <string name="key_12key_switch_full_katakana">カ</string>
    <string name="key_12key_switch_full_alphabet">Ａ</string>
    <string name="key_12key_switch_full_number">１</string>
    <string name="key_12key_switch_half_katakana">ｶﾅ</string>
    <string name="key_12key_switch_half_alphabet">AB</string>
    <string name="key_12key_switch_half_number">12</string>
    <string name="key_12key_switch_pinyin">中</string>
    <string name="key_qwerty_half_comma">､</string>
    <string name="key_qwerty_half_period">｡</string>
    <string name="key_qwerty_half_tyouon">ｰ</string>
    <string name="key_12key_undo">Undo</string>
    <string name="indicator_caps">CAPS</string>
    <string name="indicator_alt">ALT</string>
    <string name="touch_to_continue">Next »</string>
</resources>