<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (C) 2008-2012  OMRON SOFTWARE Co., Ltd.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<Keyboard
    xmlns:wnn="http://schemas.android.com/apk/res-auto"
    wnn:horizontalGap="0dip"
    wnn:keyHeight="@dimen/key_height"
    wnn:keyWidth="20%p"
    wnn:verticalGap="0dip"
    >

    <Row>
        <Key wnn:codes="-219"
            wnn:iconPreview="@drawable/key_12key_reverse_b"
            wnn:isSecondKey="true"
            wnn:keyEdgeFlags="left"
            wnn:keyIcon="@drawable/key_12key_reverse"
            wnn:keyWidth="18%"
            />
        <Key wnn:codes="-201"
            wnn:horizontalGap="2%"
            wnn:keyLabel="@string/key_12key_katakana_1"
            />
        <Key wnn:codes="-202"
            wnn:keyLabel="@string/key_12key_katakana_2"
            />
        <Key wnn:codes="-203"
            wnn:keyLabel="@string/key_12key_katakana_3"
            />
        <Key wnn:codes="-214"
            wnn:horizontalGap="2%"
            wnn:iconPreview="@drawable/key_del_b"
            wnn:isRepeatable="true"
            wnn:isSecondKey="true"
            wnn:keyEdgeFlags="right"
            wnn:keyIcon="@drawable/key_del"
            wnn:keyWidth="18%"
            />
    </Row>

    <Row>
        <Key wnn:codes="-218"
            wnn:iconPreview="@drawable/key_12key_left_b"
            wnn:isRepeatable="true"
            wnn:isSecondKey="true"
            wnn:keyEdgeFlags="left"
            wnn:keyIcon="@drawable/key_12key_left"
            wnn:keyWidth="18%"
            />
        <Key wnn:codes="-204"
            wnn:horizontalGap="2%"
            wnn:keyLabel="@string/key_12key_katakana_4"
            />
        <Key wnn:codes="-205"
            wnn:keyLabel="@string/key_12key_katakana_5"
            />
        <Key wnn:codes="-206"
            wnn:keyLabel="@string/key_12key_katakana_6"
            />
        <Key wnn:codes="-217"
            wnn:horizontalGap="2%"
            wnn:iconPreview="@drawable/key_12key_right_b"
            wnn:isRepeatable="true"
            wnn:isSecondKey="true"
            wnn:keyEdgeFlags="right"
            wnn:keyIcon="@drawable/key_12key_right"
            wnn:keyWidth="18%"
            />
    </Row>

    <Row>
        <Key wnn:codes="-222"
            wnn:iconPreview="@drawable/key_pict_sym_b"
            wnn:isSecondKey="true"
            wnn:keyEdgeFlags="left"
            wnn:keyIcon="@drawable/key_12key_pict_sym"
            wnn:keyWidth="18%"
            />
        <Key wnn:codes="-207"
            wnn:horizontalGap="2%"
            wnn:keyLabel="@string/key_12key_katakana_7"
            />
        <Key wnn:codes="-208"
            wnn:keyLabel="@string/key_12key_katakana_8"
            />
        <Key wnn:codes="-209"
            wnn:keyLabel="@string/key_12key_katakana_9"
            />
        <Key wnn:codes="-215"
            wnn:horizontalGap="2%"
            wnn:iconPreview="@drawable/key_12key_space_b"
            wnn:isRepeatable="true"
            wnn:isSecondKey="true"
            wnn:keyEdgeFlags="right"
            wnn:keyIcon="@drawable/key_12key_space"
            wnn:keyWidth="18%"
            />
    </Row>

    <Row wnn:rowEdgeFlags="bottom">
        <Key wnn:codes="-230"
            wnn:iconPreview="@drawable/key_mode_change_b"
            wnn:isSecondKey="true"
            wnn:keyEdgeFlags="left"
            wnn:keyIcon="@drawable/key_mode_full_kata"
            wnn:keyWidth="18%"
            wnn:popupKeyboard="@xml/keyboard_switch_key_jp"
            />
        <Key wnn:codes="-213"
            wnn:horizontalGap="2%"
            wnn:iconPreview="@drawable/key_12key_dakuten_b"
            wnn:keyIcon="@drawable/key_12key_dakuten"
            />
        <Key wnn:codes="-210"
            wnn:keyLabel="@string/key_12key_katakana_0"
            />
        <Key wnn:codes="-211"
            wnn:iconPreview="@drawable/key_12key_ten_b"
            wnn:keyIcon="@drawable/key_12key_ten"
            />
        <Key wnn:codes="-216"
            wnn:horizontalGap="2%"
            wnn:iconPreview="@drawable/key_enter_b"
            wnn:isSecondKey="true"
            wnn:keyEdgeFlags="right"
            wnn:keyIcon="@drawable/key_enter"
            wnn:keyWidth="18%"
            />
    </Row>
</Keyboard>
